--- a/seleniumGridConfig/nodeConfig.json
+++ b/seleniumGridConfig/nodeConfig.json
@@ -1,46 +1,18 @@
 {
-  "capabilities":
-      [
-        {
-          "browserName": "*firefox",
-          "maxInstances": 5,
-          "seleniumProtocol": "Selenium"
-        },
-        {
-          "browserName": "*googlechrome",
-          "maxInstances": 5,
-          "seleniumProtocol": "Selenium"
-        },
-        {
-          "browserName": "*iexplore",
-          "maxInstances": 1,
-          "seleniumProtocol": "Selenium"
-        },
-        {
-          "browserName": "firefox",
-          "maxInstances": 5,
-          "seleniumProtocol": "WebDriver"
-        },
-        {
-          "browserName": "chrome",
-          "maxInstances": 5,
-          "seleniumProtocol": "WebDriver"
-        },
-        {
-          "browserName": "internet explorer",
-          "maxInstances": 1,
-          "seleniumProtocol": "WebDriver"
-        }
-      ],
-  "configuration":
-  {
+  "capabilities": [
+    {
+      "browserName": "firefox",
+      "maxInstances": 10,
+      "seleniumProtocol": "WebDriver"
+    }
+  ],
+  "configuration": {
     "proxy": "org.openqa.grid.selenium.proxy.DefaultRemoteProxy",
-    "maxSession": 5,
+    "maxSession": 10,
     "port": 5555,
-    "host": ip,
     "register": true,
     "registerCycle": 5000,
-    "hubPort": 4444,
-    "hubHost": ip
+    "timeout": 120,
+    "browser": "firefox"
   }
 }
